16.09.2012:
	 - Fixed allocation error with drag&drop of plugins (rj)
	 - Fixed close menu alternative in Instrument editor (rj)
	 - Changed Aux name on strips to reflect the actual Aux strip name (rj)
09.09.2012:
         - Added instructions on how to record audio with MusE to the new manual (rj)
08.09.2012:
         - Follow up to Improved Wave Editor: Added Edit -> Adjust Wave Offset. Helps compensate for latency. (Tim) 
           FIXME: Respect clones! If operating on two selected clones of the same part, an extra event is created.
           May not be this code's problem but seems like it, other operations like moving an event seem OK.
07.09.2012:
         - Bug 3555569, 3555572: New informative ERROR, WARNING and HINT messages in cmake build script. (Tim)
           Also, detect and report missing Doxygen executable.
06.09.2012:
         - Bug 3555581: No synths listed in Edit menu: main.cpp: Move initMidiSynth() ahead of MusE. (Tim)
         - Unrelated simple change: Privatize Arranger::parentWin. (Tim)
         - Feature request 3565102: FLAC audio file import. (Tim)
04.09.2012: 
         - Fix for forum topic "Ordering of simultaneous events". (Tim)
           Methods EventList::add() and ::move() now sort all same-time notes AFTER controllers.
03.09.2012: summer sleep is over! plugins can now be grouped (flo)
14.08.2012:
         * Introducing: Improved Wave Editor. (Tim)
           Class WaveView is replaced by WaveCanvas. 
           Wave Events can be selected, added, moved and deleted.
           TODO: Bunch o' stuff, but currently it should be as good or better than the old editor.
04.08.2012:
         * Introducing: More bits for Song Changed SC_* flags. (Tim)
           Added MusECore::SongChangedFlags_t (in new type_defs.h file). Declared as int64 type.
           All Song Changed parameters, handlers, connections, calls, colateral operations etc. now use 
            this new SongChangedFlags_t. 