@@ -45,7 +45,7 @@ if (ENABLE_EXPERIMENTAL)
 endif (ENABLE_EXPERIMENTAL)
 
 if (HAVE_FLUIDSYNTH)
-      set (SubDirs ${SubDirs} fluid fluidsynth )
+      set (SubDirs ${SubDirs}  fluidsynth ) # removed fluid, fluidsynth should supercede it in every way.
 endif (HAVE_FLUIDSYNTH)
 
 subdirs(${SubDirs})
