@@ -2,6 +2,9 @@
 	 - Fixed allocation error with drag&drop of plugins (rj)
 	 - Fixed close menu alternative in Instrument editor (rj)
 	 - Changed Aux name on strips to reflect the actual Aux strip name (rj)
+         - Fixed CR:3567893 Play Event on note creation (rj)
+         - Removed 'fluid' from the list of built synths, it is inferior to fluidsynth
+           and causes confusion (rj)
 09.09.2012:
          - Added instructions on how to record audio with MusE to the new manual (rj)
 08.09.2012:
